added instruction for preparation of csv file

--- a/src/main/resources/static/views/instruction-additional-gene-info.html
+++ b/src/main/resources/static/views/instruction-additional-gene-info.html
@@ -11,16 +11,69 @@
     <h3> Instruction for preparing csv file</h3>
 </div>
 
-<div class="row">
-    <div class="col-lg ml-5 mr-5">
-        <p>SNPs may be taken using UCSC Genome Browser.
-            Official tutorial is available <a href="https://www.youtube.com/watch?v=ZqxlBF3vqhY" target="_blank">here</a>
-            and <a href="https://genome.ucsc.edu/training/vids/transcript03.pdf" target="_blank">here</a>. </p>
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            SNPs may be taken using Ensembl.
+        </div>
+        <div class="card-body text-center">
+            Go to the Ensembl website: <a href="http://www.ensembl.org/index.html" target="_blank"> click here</a>
+        </div>
+    </div>
+</div>
+
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            Choose species, write your gene name and click go.
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_csv_step1.jpg" class="img-fluid">
+            </picture>
+        </div>
     </div>
 </div>
 
 
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            step 2
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_csv_step2.jpg" class="img-fluid">
+            </picture>
+        </div>
+    </div>
+</div>
 
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            step 3
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_csv_step3.jpg" class="img-fluid">
+            </picture>
+        </div>
+    </div>
+</div>
+
+<div class="row justify-content-center">
+    <div class="card flex-fill ml-3 mr-3">
+        <div class="card-header text-center">
+            step 4
+        </div>
+        <div class="card-body text-center">
+            <picture>
+                <img src="../pictures/instruction_csv_step4.jpg" class="img-fluid">
+            </picture>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-lg ml-5 mr-5">
         <a href="/"> back to main page</a>
