--- a/src/main/resources/static/views/instruction-additional-gene-info.html
+++ b/src/main/resources/static/views/instruction-additional-gene-info.html
@@ -17,7 +17,7 @@
             SNPs may be taken using Ensembl.
         </div>
         <div class="card-body text-center">
-            Go to the Ensembl website: <a href="http://www.ensembl.org/index.html" target="_blank"> click here</a>
+            Go to the Ensembl website <a href="http://www.ensembl.org/index.html" target="_blank"> (click here)</a> and follow instruction below.
         </div>
     </div>
 </div>
